[gd_scene load_steps=16 format=3 uid="uid://dxtcub1fb3p5u"]

[ext_resource type="Script" path="res://Scrips/playerlink.gd" id="1_0bc7g"]
[ext_resource type="Texture2D" uid="uid://dd4kmt6jhee6q" path="res://img/pngegg.png" id="1_rh17t"]
[ext_resource type="Script" path="res://Scrips/Control.gd" id="3_a4qfy"]
[ext_resource type="Texture2D" uid="uid://bc167k07yvyyt" path="res://img/kindpng_6689283.png" id="4_yvtkk"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_03gse"]
size = Vector2(12, 10)

[sub_resource type="Animation" id="Animation_bx8yn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_jdvej"]
resource_name = "idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_imhk1"]
resource_name = "runDown"
length = 0.9
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 41, 45, 43, 49]
}

[sub_resource type="Animation" id="Animation_pj5j0"]
resource_name = "runLeft"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(-0.1, 0, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [50, 59, 51, 52, 53, 54, 55, 56, 59]
}

[sub_resource type="Animation" id="Animation_ccm4e"]
resource_name = "runRight"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [70, 71, 72, 73, 74, 75, 76, 77, 78, 79]
}

[sub_resource type="Animation" id="Animation_08dqa"]
resource_name = "runUp"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [60, 62, 63, 64, 65, 66, 67, 68, 69, 60]
}

[sub_resource type="Animation" id="Animation_m35oc"]
resource_name = "runWalk"
length = 4.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.2, 2.2, 3.2, 4.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 1, 0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gbglr"]
_data = {
"RESET": SubResource("Animation_bx8yn"),
"idle": SubResource("Animation_jdvej"),
"runDown": SubResource("Animation_imhk1"),
"runLeft": SubResource("Animation_pj5j0"),
"runRight": SubResource("Animation_ccm4e"),
"runUp": SubResource("Animation_08dqa"),
"runWalk": SubResource("Animation_m35oc")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l2850"]
size = Vector2(16, 20)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_n0svv"]
b = Vector2(0, 25)

[node name="playerlink" type="CharacterBody2D" groups=["player"]]
script = ExtResource("1_0bc7g")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-20.1766, 11.5152)
scale = Vector2(0.268713, 0.228207)
texture = ExtResource("1_rh17t")
offset = Vector2(16, 16)
hframes = 10
vframes = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-17, 25)
shape = SubResource("RectangleShape2D_03gse")
one_way_collision_margin = 0.0

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(3, 3)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_gbglr")
}
speed_scale = 1.506

[node name="Area2D" type="Area2D" parent="." groups=["player"]]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-17, 20)
shape = SubResource("RectangleShape2D_l2850")

[node name="Detec_obj" type="Area2D" parent="."]
collision_layer = 48
collision_mask = 48

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detec_obj"]
position = Vector2(-17, 25)
shape = SubResource("SegmentShape2D_n0svv")
one_way_collision_margin = 0.0

[node name="Macro" type="CanvasLayer" parent="."]
visible = false

[node name="Control" type="Control" parent="Macro" groups=["macro"]]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("3_a4qfy")
metadata/_edit_use_anchors_ = true

[node name="RichTextLabel" type="RichTextLabel" parent="Macro/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 5.475
anchor_top = 12.35
anchor_right = 24.65
anchor_bottom = 13.525
offset_right = 40.0
offset_bottom = 40.0
theme_override_font_sizes/normal_font_size = 30
text = "hola"
metadata/_edit_use_anchors_ = true

[node name="Sprite2D" type="Sprite2D" parent="Macro/Control"]
position = Vector2(608, 554)
scale = Vector2(0.563466, 0.197034)
texture = ExtResource("4_yvtkk")

[node name="Label" type="Label" parent="Macro/Control"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 2.75
anchor_top = 10.75
anchor_right = 5.5
anchor_bottom = 11.2
offset_right = 40.0
offset_bottom = 23.0
metadata/_edit_use_anchors_ = true

[node name="Area2D2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]

[connection signal="area_entered" from="Detec_obj" to="." method="_on_detec_obj_area_entered"]
[connection signal="area_exited" from="Detec_obj" to="." method="_on_detec_obj_area_exited"]
